Fix strangeness in blurring in the header

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -227,6 +227,13 @@ nav .twitter-image
         border: none;
     }
 
+    .main-nav-list-container
+    {
+        -webkit-backdrop-filter: none;
+        backdrop-filter: none;
+        background-color: transparent;
+    }
+
     div.contact-info-container
     {
         display: flex;
